# coAgentServer_Redux

./: Procfile  pyproject.toml  requirements.txt
my_copilotkit_remote_endpoint/: agent.py  agent_customer_support.py  agent_nutrition.py  health_check.py  modcheck.py  server.py  setup_agent.py
my_copilotkit_remote_endpoint/config/: endpoints.py
my_copilotkit_remote_endpoint/models/: assistant.py
my_copilotkit_remote_endpoint/tools/: intelsearch.py  nutrition.py  order_tracker.py  weather.py
my_copilotkit_remote_endpoint/utils/: logger.py
