[tool.poetry]
name = "my-copilotkit-remote-endpoint"
version = "0.1.0"
description = ""
authors = ["gadsdencode <jordan.martens@osscontact.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
copilotkit = "^0.1.27"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
langgraph = "^0.2.53"
requests = "^2.32.3"
tavily-python = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
